[package]
name = "rmrf"
version = "0.1.0"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
configparser = "3.0.2"
dirs = "3.0.2"
env_logger = "0.10.0"
eyre = "0.6.8"
fuzzy-matcher = "0.3.7"
log = "0.4.20"
rayon = "1.9.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.32"
