[package]
name = "rkvr"
version = "0.1.14"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.26", features = ["derive"] }
configparser = "3.1.0"
dirs = "6.0.0"
env_logger = "0.11.6"
eyre = "0.6.12"
fuzzy-matcher = "0.3.7"
log = "0.4.22"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"

[build]
rustflags = ["-Z", "unstable-options"]
