[package]
name = "rkvr"
version = "0.1.18"
authors = ["Scott Idler <scott.a.idler@gmail.com>"]
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
configparser = "3.1.0"
dirs = "6.0.0"
env_logger = "0.11.8"
eyre = "0.6.12"
fuzzy-matcher = "0.3.7"
libc = "0.2.174"
log = "0.4.27"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
which = "8.0"

[dev-dependencies]
tempfile = "3.20"
